--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "watch": "vite build --watch",
+    "watch": "concurrently \"vite build --watch\" \"sass --watch assets/sass/styles.scss:assets/css/styles.css --style compressed\"",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "concurrently": "^7.6.0",
     "vite": "^4.0.0"
   },
   "dependencies": {
